--- a/public/app.json
+++ b/public/app.json
@@ -81,7 +81,7 @@
 			"rules": [
 				{
 					"match": [
-						"*://file-examples-com.github.io/*",
+						"*://file-examples.com/*",
 						"*://sample-videos.com/*"
 					],
 					"options": {
@@ -137,7 +137,7 @@
 		"version2": "21.90.59.15",
 		"version3": "15.80.50.34",
 		"version4": "canary",
-		"version": "canary"
+		"version": "beta"
     },
     "shortcut": {
         "company": "OpenFin",
