--- a/public/app.json
+++ b/public/app.json
@@ -46,7 +46,8 @@
 		},
 		"permissions": {
 			"Application": {
-				"setFileDownloadLocation": true
+				"setFileDownloadLocation": true,
+				"getFileDownloadLocation": true
 			},
 			"ExternalWindow": {
 				"wrap": true
@@ -82,6 +83,7 @@
 				{
 					"match": [
 						"*://file-examples.com/*",
+						"*://filesamples.com/*",
 						"*://sample-videos.com/*"
 					],
 					"options": {
@@ -89,7 +91,7 @@
 							"rules": [
 								{
 									"match": [
-										"*://*/*.xls", "*://*/*.csv", "*://*/*.ppt"
+										"*://*/*.csv", "*://*/*.ppt"
 									],
 									"behavior": "no-prompt"
 								},
@@ -105,7 +107,7 @@
 				},
 				{
 					"match": [
-						"*://www.lancsngfl.ac.uk/*"
+						"*://localhost:5555/*"
 					],
 					"options": {
 						"downloadSettings": {
@@ -132,12 +134,9 @@
 	"splashScreenImage" : "http://localhost:5555/splash.png",
     "runtime": {
         "arguments": "--inspect=9222 --remote-debugging-port=0 --v=1 --disable-permissions-check-from-rvm --relax-api-security --diagnostics --log-net-log=C:/tmp/test.json",
-		"version0": "16.83.53.27",
-		"version1": "20.91.63.5",
-		"version2": "21.90.59.15",
 		"version3": "15.80.50.34",
-		"version4": "canary",
-		"version": "beta"
+		"version": "canary",
+		"version2": "beta"
     },
     "shortcut": {
         "company": "OpenFin",
